--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Numeric\BinomialCoefficients.cs" />
     <Compile Include="Numeric\CatalanNumbers.cs" />
     <Compile Include="Numeric\GreatestCommonDivisor.cs" />
+    <Compile Include="Numeric\LeastCommonMultiple.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sorting\BinarySearchTreeSorter.cs" />
     <Compile Include="Sorting\BubbleSorter.cs" />
@@ -80,7 +81,5 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="Trees\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
